mariadb/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: mariadb
spec:
  ports:
    - port: 3306
  selector:
    app: mariadb
