mariadb/manifests/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: mariadb
  namespace: mariadb
spec:
  entryPoints:
    - mariadb
  routes:
    - kind: Rule
      match: "Host(`rotta.gt`)"
      services:
        - kind: Service
          port: 3306
          name: mariadb
          namespace: mariadb
          #middlewares:
          #- name: mariadb-cors
          #namespace: mariadb
          #tls:
          #secretName: mariadb-rotta-gt-cert-secret
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: mariadb-cors
  namespace: mariadb
spec:
  headers:
    accessControlAllowMethods:
      - GET
      - OPTIONS
      - PUT
      - POST
      - DELETE
    accessControlAllowOriginList:
      - https://rotta.gt
    accessControlAllowCredentials: true
    accessControlMaxAge: 100
    addVaryHeader: true
